# zero2prod

./: .gitignore  Cargo.toml  Rocket.toml
.github/workflows/: general.yml
db/sqlx/migrations/: 20220605065700_create-subscriptions-table.sql
src/: lib.rs  logging.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
