[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"]}               # Application-level tracing for Rust. 
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

rocket = "0.5.0-rc.3"                  # Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_sqlite"]}
uuid = { version = "1.14", features = ["v4"] }
sqlx = { version = "0.7", features = ["macros"]}

[dev-dependencies]
ctor = "0.2.9"                     # __attribute__((constructor)) for Rust
lazy_static = "1.4.0"            # A macro for declaring lazily evaluated statics in Rust.
tokio = "1.43.0"                  # An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications. 
tokio-test = "0.4.2"                # Testing utilities for Tokio- and futures-based code 
reqwest = "0.11"                               # higher level HTTP client library
reqwest-middleware = "0.4"                      # Wrapper around reqwest to allow for client middleware chains.
reqwest-retry = "0.2"         # Retry middleware for reqwest.
futures = "0.3"                # An implementation of futures and streams featuring zero allocations, composability, and itera…